--- a/src/Components/Quiz/time.css
+++ b/src/Components/Quiz/time.css
@@ -8,7 +8,7 @@
 
 .timer_container {
     /* background-color: white; */
-    width: 20vw;
+    width: 1000px;
     padding: 1rem 6rem;
     border-radius: 1rem;
     box-shadow: 0 1rem 1rem --0.7rem black;
